--- a/Challenge/index.html
+++ b/Challenge/index.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>ATM</title>
     
 </head>
 <body>
-    <script src="script.js"></script>
+
+    <div class="atm">
+
+        <img src="pics/банкомат.png">
+
+        <div class="scr1">
+        <script src="script.js"></script>
+        </div>
+    </div>
+
 </body>
 </html>
